--- a/desafios/desafio-cordel/style.css
+++ b/desafios/desafio-cordel/style.css
@@ -1,13 +1,25 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+  --fonte001: Verdana, Geneva, Tahoma, sans-serif;
+  --fonte002: 'Passion One', cursive;
+  --fonte003: 'Sriracha', cursive;
+}
+
 * {
   margin: 0px;
   padding: 0px;
+  font-size: 1em;
 }
 
 html, body {
   min-height: 100vh;
   background-color: darkgray;
+  font-family: var(--fonte001);
 }
 
 header {
@@ -19,6 +31,8 @@ header {
 header h1 {
   padding-top: 50px;
   font-variant: small-caps;
+  font-family: var(--fonte002);
+  font-size: 10vw;
 }
 
 header p {
@@ -40,6 +54,8 @@ section {
   padding-bottom: 10vh;
   padding-left: 10px;
   line-height: 2em;
+  font-family: var(--fonte003);
+  font-size: 2.9vw;
 }
 
 section.normal {
@@ -53,8 +69,9 @@ section.imagem {
 }
 
 section.imagem > p {
+  display: inline-block;
+  padding: 5px;
   background-color: rgba(0, 0, 0, 0.281);
-  width: 40vh;
 }
 
 footer {
